--- a/trunk/ParticleEditor2/ParticleEditor/Properties/Resources.resx
+++ b/trunk/ParticleEditor2/ParticleEditor/Properties/Resources.resx
@@ -136,14 +136,17 @@
   <data name="img_minimize_nor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_minimize_nor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="img_screen_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_screen_bg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="img_close_over" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_close_over.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="img_tab03_nor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_tab03_nor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="img_SampleBlob" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_SampleBlob.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="img_SampleStart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_SampleStart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="img_close_nor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_close_nor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -157,28 +160,31 @@
   <data name="img_top_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_top_bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="img_SampleCircle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_SampleCircle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="img_maximize_nor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_maximize_nor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="img_windowbar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_windowbar.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="img_tab04_nor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_tab04_nor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="img_tab01_nor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_tab01_nor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="img_SampleBlob" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_SampleBlob.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="img_SampleCircle" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_SampleCircle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="img_windowbar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_windowbar.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="img_SampleHeart" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_SampleHeart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="img_SampleStart" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img_SampleStart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="img_tab04_nor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_tab04_nor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="img_screen_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_screen_bg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="img_About_nor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_About_nor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="img_About_over" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_About_over.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
